@@ -52,6 +52,7 @@ enum {
     KEY_LEN,
     HMAC_DIGEST_TYPE,
     HMAC_KEY_LEN,
+    GET_HMAC_KEY,
     KEY_RIJNDAEL,
     KEY_RIJNDAEL_BASE64,
     KEY_HMAC_BASE64,
@@ -92,6 +93,7 @@ static struct option cmd_opts[] =
     {"gpg-home-dir",        1, NULL, GPG_HOME_DIR },
     {"gpg-agent",           0, NULL, GPG_AGENT },
     {"get-key",             1, NULL, 'G'},
+    {"get-hmac-key",        1, NULL, GET_HMAC_KEY },
     {"help",                0, NULL, 'h'},
     {"http-proxy",          1, NULL, 'H'},
     {"key-gen",             0, NULL, 'k'},
