@@ -85,6 +85,7 @@ typedef struct fko_cli_options
     char key_gen_file[MAX_PATH_LEN];
     char server_command[MAX_LINE_LEN];
     char get_key_file[MAX_PATH_LEN];
+    char get_hmac_key_file[MAX_PATH_LEN];
     char save_packet_file[MAX_PATH_LEN];
     int  save_packet_file_append;
     int  show_last_command;
