@@ -34,6 +34,10 @@
 /* Prototypes
 */
 char* getpasswd(const char *prompt);
-char* getpasswd_file(fko_ctx_t ctx, const fko_cli_options_t *options);
+
+/* This can be used to acquire an encryption key or HMAC key
+*/
+void get_key_file(char *key, int *key_len, const char *key_file,
+    fko_ctx_t ctx, const fko_cli_options_t *options);
 
 #endif  /* GETPASSWD_H */
