@@ -60,6 +60,10 @@ fwknop-2.5 (//2013):
     - (Shawn Wilson) Added better SPA source IP logging for various fwknopd
       logging messages.  This helps to make it more clear why certain SPA
       packets are rejected from some systems.
+    - [client] Added --get-hmac-key to allow HMAC keys to be acquried from the
+      specified file similarly to the --get-key option.  This is a convenience
+      only, and the fwknop rc file feature should be used instead since it is
+      far more powerful.
 
 fwknop-2.0.4 (12/09/2012):
     - [client] Misc fixes and the addition of save_args and last command 
